/*================================================================
 *   Copyright (C) 2022 All rights reserved.
 *
 *   filename：  BuddyModifyUpdatePairNotifyAction.h
 *   author：    Barry
 *   email：     dev.crypto@proton.me
 *   createdAt： Thursday, January 19, 2023
 *   desc： 
 *
 #pragma once
================================================================*/
#ifndef __BUDDYMODIFYUPDATEPAIRNOTIFYACTION_H__
#define __BUDDYMODIFYUPDATEPAIRNOTIFYACTION_H__

#include "../Request.h"

namespace ACTION_BUDDY {
    void BuddyModifyUpdatePairNotifyAction(CRequest* request);
};

#endif /*defined(__BUDDYMODIFYUPDATEPAIRNOTIFYACTION_H__) */
